syntax = "proto3";
package drp.v1;

import "drp/v1/object.proto";

enum MessageType {
  MESSAGE_TYPE_UNSPECIFIED = 0;
  MESSAGE_TYPE_FETCH_STATE = 1;
  MESSAGE_TYPE_FETCH_STATE_RESPONSE = 2;
  MESSAGE_TYPE_UPDATE = 3;
  MESSAGE_TYPE_SYNC = 4;
  MESSAGE_TYPE_SYNC_ACCEPT = 5;
  MESSAGE_TYPE_SYNC_REJECT = 6;
  MESSAGE_TYPE_ATTESTATION_UPDATE = 7;
  MESSAGE_TYPE_CUSTOM = 8;
  MESSAGE_TYPE_ID_HEARTBEAT = 9;
}

message Message {
  string sender = 1;
  MessageType type = 2;
  bytes data = 3;
}

message FetchState {
  string object_id = 1;
  string vertex_hash = 2;
}

message FetchStateResponse {
  string object_id = 1;
  string vertex_hash = 2;
  drp.v1.DRPStateOtherTheWire acl_state = 3;
  drp.v1.DRPStateOtherTheWire drp_state = 4;
}

message Update {
  string object_id = 1;
  repeated drp.v1.Vertex vertices = 2;
  repeated drp.v1.Attestation attestations = 3;
}

message AttestationUpdate {
  string object_id = 1;
  repeated drp.v1.Attestation attestations = 2;
}

message Sync {
  string object_id = 1;
  repeated string vertex_hashes = 2;
}

message SyncAccept {
  string object_id = 1;
  repeated drp.v1.Vertex requested = 2;
  repeated drp.v1.AggregatedAttestation attestations = 3;
  repeated string requesting = 4;
}

message SyncReject {}

message IDHeartbeat {
  string object_id = 1;
}

message IDHeartbeatResponse {
  message Subscribers {
    repeated string multiaddrs = 1;
  }
  map<string, Subscribers> subscribers = 1;
}
